--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,1 +1,6 @@
-info: "master branch,springcloud-config/application-dev.yml
+info: master branch,springcloud-config/application-dev.yml
+
+CommonResult:
+  code: 200
+  message: 访问成功
+  data: master branch,springcloud-config/application-dev.yml
