--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,2 +1,2 @@
-info:
-  message: master branch,springcloud-config/application-dev.yml
+config:
+  info: master branch,springcloud-config/application-dev.yml
